refactor: 코드 컨벤션 적용 및 API 클래스 네이밍 통일
- Spotless 플러그인 추가 (Naver Eclipse Formatter 적용)
- [Domain]Api 클래스를 [Domain]Controller로 리네이밍 (5개 파일)
  - AuthApi → AuthController
  - GameBuildApi → GameBuildController
  - InterviewApi → InterviewController
  - SurveyApi → SurveyController
  - ThemeApi → ThemeController
- ThemeController 내부 DTO를 별도 파일로 분리
  - ThemeCategoryResponse, ThemeDetailResponse
- naming_conventions.md 업데이트 ([Domain]Controller 패턴만 허용)
- 전체 Java 파일에 Naver Eclipse Formatter 포맷팅 적용